8333130: MakeJAR2.sh uses hard-coded JDK version